<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".SplashActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_800"
        android:textSize="@dimen/text_size_18"
        android:text="@string/app_name"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_1"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="270"
        app:lottie_autoPlay="true"

        android:padding="@dimen/space_x_large"
        app:lottie_rawRes="@raw/battery_lottie_anim" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <TextView
        android:id="@+id/tv_develop_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_700"
        android:textSize="@dimen/text_size_14"
        android:text="@string/developed_by"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_6"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_700"
        android:textSize="@dimen/text_size_12"
        android:text="@string/version_code"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintTop_toBottomOf="@id/tv_develop_by"/>

</androidx.constraintlayout.widget.ConstraintLayout>