<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_800"
        android:textSize="@dimen/text_size_18"
        android:text="@string/app_name"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_1"/>


    <com.mikhaellopez.circularprogressbar.CircularProgressBar

       app:layout_constraintTop_toTopOf="@id/gl_horizontal_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl_horizontal_4"
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cpb_background_progressbar_color="@color/gray"
        app:cpb_background_progressbar_width="10dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progress="10"
        app:cpb_progressbar_color="@color/green"
        app:cpb_progressbar_width="15dp"
        app:cpb_round_border="true" />

    <TextView
        android:id="@+id/tv_charge_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_800"
        android:textSize="@dimen/_42ssp"
        android:textStyle="bold"
        android:text="60%"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_3"/>
    <TextView
        android:id="@+id/tv_time_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_800"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:text="@string/time_left"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal_4"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal_3"
        />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_800"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:text="@string/time"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintTop_toBottomOf="@id/tv_time_left"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.015" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_top_rounded">

    </View>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/gl_vertical_left"
        app:layout_constraintRight_toRightOf="@id/gl_vertical_right"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal_6"
        android:backgroundTint="@color/dark"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_horizontal_7">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/space_middle">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_14"
            android:text="@string/Temperature"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/view_divider_left"


            />
        <TextView
            android:id="@+id/tv_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="31.6"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintTop_toBottomOf="@id/tv_voltage"
            app:layout_constraintRight_toLeftOf="@id/tv_temperature_unit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°C"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_16"

            app:layout_constraintLeft_toRightOf="@+id/tv_temperature_value"
            app:layout_constraintTop_toBottomOf="@id/tv_voltage"
            app:layout_constraintRight_toLeftOf="@id/view_divider_left"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/view_divider_left"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            app:layout_constraintRight_toLeftOf="@id/view_divider_right"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Voltage"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintRight_toLeftOf="@+id/view_divider_right"
            app:layout_constraintLeft_toRightOf="@+id/view_divider_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_voltage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.3"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintTop_toBottomOf="@id/tv_voltage"
           app:layout_constraintRight_toLeftOf="@id/tv_voltage_unit"
            app:layout_constraintLeft_toLeftOf="@id/view_divider_left"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv_voltage_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_16"

            app:layout_constraintLeft_toRightOf="@+id/tv_voltage_value"
            app:layout_constraintTop_toBottomOf="@id/tv_voltage"
            app:layout_constraintRight_toLeftOf="@id/view_divider_right"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/view_divider_right"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            app:layout_constraintLeft_toRightOf="@id/view_divider_left"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_14"
            android:text="@string/capacity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/view_divider_right"
            />
        <TextView
            android:id="@+id/tv_capacity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1512"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_16"
           app:layout_constraintRight_toLeftOf="@id/tv_capacity_unit"
            app:layout_constraintTop_toBottomOf="@id/tv_capacity"
            app:layout_constraintLeft_toLeftOf="@id/view_divider_right"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv_capacity_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mAh"
            android:textColor="@color/white_700"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintLeft_toRightOf="@+id/tv_capacity_value"
            app:layout_constraintTop_toBottomOf="@id/tv_capacity"
          app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>